--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "web-push": "^3.4.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
